--- a/Dark Days/Dark Days/HeroViewController.storyboard
+++ b/Dark Days/Dark Days/HeroViewController.storyboard
@@ -32,8 +32,16 @@
                                 </constraints>
                                 <state key="normal" image="Helm"/>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3ao-dt-idE" userLabel="AccessoryButton" customClass="EquipmentButton" customModule="Dark_Days" customModuleProvider="target">
+                                <rect key="frame" x="38" y="40" width="55" height="55"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="55" id="9SB-uA-hjA"/>
+                                    <constraint firstAttribute="width" secondItem="3ao-dt-idE" secondAttribute="height" multiplier="1:1" id="GTM-M1-RaW"/>
+                                </constraints>
+                                <state key="normal" image="Accessory"/>
+                            </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="LMS-Zp-1oA" userLabel="LeftHandButton" customClass="EquipmentButton" customModule="Dark_Days" customModuleProvider="target">
-                                <rect key="frame" x="205" y="222.5" width="55" height="55"/>
+                                <rect key="frame" x="205" y="222" width="55" height="55"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="55" id="dul-Tm-cZS"/>
                                     <constraint firstAttribute="width" secondItem="LMS-Zp-1oA" secondAttribute="height" multiplier="1:1" id="jjP-91-bsI"/>
@@ -41,7 +49,7 @@
                                 <state key="normal" image="LeftHand"/>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="58g-mR-vui" userLabel="RightHandButton" customClass="EquipmentButton" customModule="Dark_Days" customModuleProvider="target">
-                                <rect key="frame" x="60" y="222.5" width="55" height="55"/>
+                                <rect key="frame" x="60" y="222" width="55" height="55"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="55" id="i6n-CV-R7r"/>
                                     <constraint firstAttribute="width" secondItem="58g-mR-vui" secondAttribute="height" multiplier="1:1" id="rc4-a8-WeH"/>
@@ -49,7 +57,7 @@
                                 <state key="normal" image="RightHand"/>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6MH-he-zNu" userLabel="ChestButton" customClass="EquipmentButton" customModule="Dark_Days" customModuleProvider="target">
-                                <rect key="frame" x="132.5" y="125" width="55" height="55"/>
+                                <rect key="frame" x="132" y="125" width="55" height="55"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="6MH-he-zNu" secondAttribute="height" multiplier="1:1" id="7Os-bT-OsL"/>
                                     <constraint firstAttribute="height" constant="55" id="oPu-FD-2Be"/>
@@ -57,7 +65,7 @@
                                 <state key="normal" image="Chest"/>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="tWM-Zd-iTa" userLabel="BootsButton" customClass="EquipmentButton" customModule="Dark_Days" customModuleProvider="target">
-                                <rect key="frame" x="132.5" y="395" width="55" height="55"/>
+                                <rect key="frame" x="132" y="395" width="55" height="55"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="55" id="VC5-h6-Mw0"/>
                                     <constraint firstAttribute="width" secondItem="tWM-Zd-iTa" secondAttribute="height" multiplier="1:1" id="Xbx-or-Lf4"/>
@@ -65,11 +73,15 @@
                                 <state key="normal" image="Boots"/>
                             </button>
                         </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
+                            <constraint firstItem="3ao-dt-idE" firstAttribute="top" secondItem="lDs-B1-mLe" secondAttribute="top" id="2xu-sr-5sJ"/>
                             <constraint firstItem="lDs-B1-mLe" firstAttribute="top" secondItem="H5F-ib-KGt" secondAttribute="top" id="4Jr-Ia-U2f"/>
                             <constraint firstItem="H5F-ib-KGt" firstAttribute="top" secondItem="BYk-lY-vIi" secondAttribute="bottom" constant="20" id="4gk-va-UAW"/>
                             <constraint firstItem="lNS-tN-AT4" firstAttribute="top" secondItem="H5F-ib-KGt" secondAttribute="bottom" constant="20" id="FCV-8J-zsI"/>
+                            <constraint firstItem="58g-mR-vui" firstAttribute="top" secondItem="3ao-dt-idE" secondAttribute="bottom" constant="117.5" id="Jbp-sd-mp1"/>
+                            <constraint firstItem="3ao-dt-idE" firstAttribute="width" secondItem="3ao-dt-idE" secondAttribute="height" multiplier="1:1" id="K1s-up-HCP"/>
+                            <constraint firstItem="lDs-B1-mLe" firstAttribute="leading" secondItem="3ao-dt-idE" secondAttribute="trailing" constant="40" id="PLh-s8-wGS"/>
                             <constraint firstItem="6MH-he-zNu" firstAttribute="centerX" secondItem="H5F-ib-KGt" secondAttribute="centerX" id="Ssj-et-8wE"/>
                             <constraint firstItem="LMS-Zp-1oA" firstAttribute="trailing" secondItem="H5F-ib-KGt" secondAttribute="trailing" constant="25" id="VbP-AI-cQg"/>
                             <constraint firstItem="6MH-he-zNu" firstAttribute="top" secondItem="lDs-B1-mLe" secondAttribute="bottom" constant="30" id="aHM-F5-AjM"/>
@@ -81,6 +93,11 @@
                             <constraint firstItem="LMS-Zp-1oA" firstAttribute="centerY" secondItem="H5F-ib-KGt" secondAttribute="centerY" id="vpO-Gm-SkJ"/>
                             <constraint firstItem="tWM-Zd-iTa" firstAttribute="bottom" secondItem="H5F-ib-KGt" secondAttribute="bottom" constant="-10" id="y1u-75-PdT"/>
                         </constraints>
+                        <variation key="default">
+                            <mask key="constraints">
+                                <exclude reference="Jbp-sd-mp1"/>
+                            </mask>
+                        </variation>
                     </view>
                     <navigationItem key="navigationItem" id="RU9-2W-d2E">
                         <barButtonItem key="rightBarButtonItem" image="Menu" id="Vzb-BL-Hwd">
@@ -97,6 +114,7 @@
         </scene>
     </scenes>
     <resources>
+        <image name="Accessory" width="40" height="40"/>
         <image name="Boots" width="40" height="40"/>
         <image name="Chest" width="40" height="40"/>
         <image name="Helm" width="40" height="40"/>
