--- a/Dark Days/Dark Days/HeroCreation.storyboard
+++ b/Dark Days/Dark Days/HeroCreation.storyboard
@@ -33,7 +33,26 @@
                     <view key="view" contentMode="scaleToFill" id="bse-Ut-NgE">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="6pE-XO-hiV">
+                                <rect key="frame" x="0.0" y="64" width="320" height="416"/>
+                            </containerView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="hoM-Yr-Y9c" firstAttribute="top" secondItem="6pE-XO-hiV" secondAttribute="bottom" id="BqA-Nm-tbr"/>
+                            <constraint firstItem="6pE-XO-hiV" firstAttribute="centerX" secondItem="bse-Ut-NgE" secondAttribute="centerX" id="Oyy-1x-tRT"/>
+                            <constraint firstItem="6pE-XO-hiV" firstAttribute="height" secondItem="bse-Ut-NgE" secondAttribute="height" id="aXf-Rd-6cy"/>
+                            <constraint firstItem="6pE-XO-hiV" firstAttribute="width" secondItem="bse-Ut-NgE" secondAttribute="width" id="eCr-9d-utv"/>
+                            <constraint firstItem="6pE-XO-hiV" firstAttribute="centerY" secondItem="bse-Ut-NgE" secondAttribute="centerY" id="ytC-TN-l5m"/>
+                            <constraint firstItem="6pE-XO-hiV" firstAttribute="top" secondItem="hNF-BX-PaY" secondAttribute="bottom" id="z29-er-bv0"/>
+                        </constraints>
+                        <variation key="default">
+                            <mask key="constraints">
+                                <exclude reference="aXf-Rd-6cy"/>
+                                <exclude reference="ytC-TN-l5m"/>
+                            </mask>
+                        </variation>
                     </view>
                     <navigationItem key="navigationItem" id="MZD-CG-2IS">
                         <barButtonItem key="leftBarButtonItem" title="Back" id="CKh-Ni-sA5">
@@ -48,6 +67,7 @@
                         </barButtonItem>
                     </navigationItem>
                     <connections>
+                        <outlet property="containerView" destination="6pE-XO-hiV" id="xIJ-JX-0eG"/>
                         <outlet property="nextButton" destination="noM-nb-y3g" id="GaI-5A-PGD"/>
                     </connections>
                 </viewController>
