--- a/Dark Days/Dark Days/InfoCell.xib
+++ b/Dark Days/Dark Days/InfoCell.xib
@@ -22,13 +22,13 @@
                         <attributedString key="attributedText"/>
                         <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                     </textView>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Ssa-TL-ct5">
+                    <button opaque="NO" contentMode="scaleAspectFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cF2-dM-VSW" userLabel="Info Image">
                         <rect key="frame" x="13" y="8" width="56" height="56"/>
                         <constraints>
-                            <constraint firstAttribute="width" secondItem="Ssa-TL-ct5" secondAttribute="height" multiplier="1:1" id="2Gx-67-CNB"/>
-                            <constraint firstAttribute="width" constant="56" id="ZZk-Yd-pMF"/>
+                            <constraint firstAttribute="width" constant="56" id="Otd-Zu-JYS"/>
+                            <constraint firstAttribute="width" secondItem="cF2-dM-VSW" secondAttribute="height" multiplier="1:1" id="pUa-iP-3vf"/>
                         </constraints>
-                    </imageView>
+                    </button>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bwb-Ib-sok">
                         <rect key="frame" x="77" y="8" width="235" height="20.5"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
@@ -37,20 +37,20 @@
                     </label>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="bwb-Ib-sok" firstAttribute="leading" secondItem="Ssa-TL-ct5" secondAttribute="trailing" constant="8" id="3ag-eh-66C"/>
+                    <constraint firstItem="cF2-dM-VSW" firstAttribute="top" secondItem="wI4-qv-xSV" secondAttribute="topMargin" id="1o4-wG-NaT"/>
                     <constraint firstAttribute="bottomMargin" relation="greaterThanOrEqual" secondItem="g8V-3x-kFQ" secondAttribute="bottom" constant="5" id="6FS-JO-PM1"/>
-                    <constraint firstItem="Ssa-TL-ct5" firstAttribute="top" secondItem="wI4-qv-xSV" secondAttribute="topMargin" id="6uq-MP-DI9"/>
+                    <constraint firstItem="cF2-dM-VSW" firstAttribute="leading" secondItem="wI4-qv-xSV" secondAttribute="leadingMargin" constant="5" id="Al4-Nw-6FU"/>
                     <constraint firstAttribute="trailingMargin" secondItem="bwb-Ib-sok" secondAttribute="trailing" id="D44-hc-ZTe"/>
                     <constraint firstItem="g8V-3x-kFQ" firstAttribute="leading" secondItem="wI4-qv-xSV" secondAttribute="leadingMargin" constant="5" id="HKe-9h-JcS"/>
-                    <constraint firstItem="Ssa-TL-ct5" firstAttribute="leading" secondItem="wI4-qv-xSV" secondAttribute="leadingMargin" constant="5" id="Izc-Sd-xta"/>
                     <constraint firstItem="g8V-3x-kFQ" firstAttribute="top" secondItem="bwb-Ib-sok" secondAttribute="bottom" constant="5" id="NxN-YI-o8c"/>
+                    <constraint firstAttribute="bottomMargin" relation="greaterThanOrEqual" secondItem="cF2-dM-VSW" secondAttribute="bottom" constant="5" id="O7U-MH-Qyo"/>
                     <constraint firstAttribute="trailingMargin" secondItem="g8V-3x-kFQ" secondAttribute="trailing" constant="5" id="Pim-D3-X2N"/>
-                    <constraint firstAttribute="bottomMargin" relation="greaterThanOrEqual" secondItem="Ssa-TL-ct5" secondAttribute="bottom" priority="999" constant="5" id="c8X-xi-u8Z"/>
-                    <constraint firstItem="bwb-Ib-sok" firstAttribute="top" secondItem="Ssa-TL-ct5" secondAttribute="top" id="vbq-5O-HuY"/>
+                    <constraint firstItem="bwb-Ib-sok" firstAttribute="leading" secondItem="cF2-dM-VSW" secondAttribute="trailing" constant="8" id="WQa-ii-3DA"/>
+                    <constraint firstItem="cF2-dM-VSW" firstAttribute="top" secondItem="bwb-Ib-sok" secondAttribute="top" id="aXL-32-LdB"/>
                 </constraints>
             </tableViewCellContentView>
             <connections>
-                <outlet property="infoImageView" destination="Ssa-TL-ct5" id="uVJ-qh-rHi"/>
+                <outlet property="infoImageButton" destination="cF2-dM-VSW" id="EgM-tf-Uf6"/>
                 <outlet property="infoNameLabel" destination="bwb-Ib-sok" id="Zpw-WU-RjU"/>
                 <outlet property="infoTextView" destination="g8V-3x-kFQ" id="Y1a-ZQ-fLe"/>
             </connections>
